# Call_Me_Maybe

./: Makefile  README.md  pyproject.toml
src/: __init__.py  __main__.py
src/generator/: __init__.py  generate.py  llm.py  output.py  prompt.py  state_machine.py  vocabulary.py
src/parser/: arguments_parser.py  file_parser.py  pydantic_class.py
